# Data-Structures-Optimizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Sample datasets/: random_decimal_dataset.csv  train_integerized.csv  words_dataset_30kNodes.csv
analyzer/: DataAnalyzer.h  RecommendationEngine.h
benchmark/: Benchmark.h  PerformanceMetrics.cpp  PerformanceMetrics.h
core/: BST.h  Graph.cpp  Graph.h  HashMap.h  Heap.h  Queue.h  Trie.h
docs/: newResults.csv
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  newAnalysis.cpp  newAnalysis.h  newAnalysis.ui  results.cpp  results.h  results.ui
resources/: resources.qrc  resources.qrc.save
